--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,7 @@
         {% for p in r_product %}
         <div class="col mb-4">
           <div class="product-card position-relative">
+            <a href="/product_detail/{{ p.id }}">
             <div class="card-img">
               <img src="{{ p.image_main.url }}" alt="{{ p.name }}" class="product-image img-fluid">
               <div class="cart-concern position-absolute d-flex justify-content-center">
@@ -50,10 +51,11 @@
             </div>
             <div class="card-detail d-flex justify-content-between align-items-center mt-3">
               <h3 class="card-title fs-6 fw-normal m-0">
-                <a href="/">{{ p.name }}</a>
+                <a href="/product_detail/{{ p.id }}">{{ p.name }}</a>
               </h3>
               <span class="card-price fw-bold">${{ p.price }}</span>
             </div>
+            <a href="/product_detail/{{ p.id }}">
           </div>
         </div>
         {% endfor %}
@@ -77,7 +79,8 @@
             {% for p in product %}
             <div class="col mb-4 mb-3">
               <div class="product-card position-relative">
-                <div class="card-img">
+                <a href="/product_detail/{{ p.id }}">
+                  <div class="card-img">
                   <img src="{{ p.image_main.url }}" alt="{{ p.name }}" class="product-image img-fluid">
                   <div class="cart-concern position-absolute d-flex justify-content-center">
                     <div class="cart-button d-flex gap-2 justify-content-center align-items-center">
@@ -86,10 +89,11 @@
                 </div>
                 <div class="card-detail d-flex justify-content-between align-items-center mt-3">
                   <h3 class="card-title fs-6 fw-normal m-0">
-                    <a href="">{{p.name}}</a>
+                    {{p.name}}
                   </h3>
                   <span class="card-price fw-bold">${{ p.price }}</span>
                 </div>
+              </a>
               </div>
             </div>
           {% endfor %}
